--- a/src/assets/css/navbar.css
+++ b/src/assets/css/navbar.css
@@ -124,7 +124,7 @@
   border-radius: 50%;
   position: absolute;
   top: 4px;
-  left: 20px;
+  left: 10px;
   height: 20px;
   width: 20px;
   font-size: 8px;
@@ -183,7 +183,17 @@
   }
   .cart-count {
     transform: scale(1.4);
-    top: 15px;
+    top: 10px;
     left: 10px;
+  }
+
+  .logo-header {
+    margin-top: 15px;
+  }
+}
+
+@media screen and (max-width: 900px) and (min-width: 600px) {
+  .wishlist-btn-d {
+    margin-left: 65%;
   }
 }
