--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -1,9 +1,9 @@
 .main {
+  overflow: hidden;
   display: flex;
   position: relative;
-  overflow-y: scroll;
   margin-top: 10vh;
-  height: 100%;
+  height: 120vh;
   width: 100vw;
   left: 0px;
 }
@@ -68,10 +68,14 @@
 }
 
 .products-section {
+  overflow: scroll;
   height: 100%;
   width: 80vw;
 }
 
+.products-section::-webkit-scrollbar {
+  visibility: hidden;
+}
 .products-container {
   justify-content: center;
   height: 90%;
@@ -222,7 +226,7 @@
 
 @media screen and (max-width: 900px) and (min-width: 300px) {
   .main {
-    overflow-y: scroll;
+    overflow-y: hidden;
     flex-direction: column;
   }
 
@@ -234,13 +238,13 @@
     border-radius: 0px 12px 12px 0px;
     transform: translateX(-140vw);
     z-index: 4;
+    background-color: #fff;
     transition: all ease-in 0.4s;
   }
   .aside-wrapper {
-    box-shadow: 4px 0px 10px 0px rgb(99 98 98);
     background-color: #fff;
     width: 90%;
-    height: 90%;
+    height: 67%;
     overflow-y: scroll;
   }
 
@@ -264,6 +268,7 @@
   .products-section {
     height: 0;
     width: 0;
+
     visibility: hidden;
   }
   .sort-menu {
@@ -548,6 +553,7 @@
   }
 
   .m-main {
+    overflow-y: scroll;
     height: 80%;
   }
 }
